# MP3Buster

./: CMakeLists.txt  README.md
src/: File.cpp  File.hpp  Main.cpp  Utils.cpp  Utils.hpp  logger.hpp
src/mpeg/: Mp3.cpp  Mp3.hpp
src/mpeg/id3v2/: id3v1.hpp  id3v1Genre.hpp  id3v2.cpp  id3v2.hpp
